--- a/app/views/custom/admin/poll/polls/_form.html.erb
+++ b/app/views/custom/admin/poll/polls/_form.html.erb
@@ -58,10 +58,9 @@
   <div class='row'>
     <div class='column'>
 
-      <%= f.check_box :bam_street_restricted, class: 'voting_phase_only_streets'  %>
-      <%= label_tag :bam_street_restricted, 'Beschränkt auf Straßen' %>
+      <%= f.check_box :bam_street_restricted, data: { checkbox_toggle: "#bam-streets" }  %>
 
-      <div class='projekt-phase-street-selector' data-phase-name=<%= 'voting_phase' %>>
+      <div id="bam-streets" class='projekt-phase-street-selector' data-phase-name=<%= 'voting_phase' %> style=<%= @poll.bam_street_restricted.present? ? 'display:block' : 'display:none' %> >
         <div id="projekt-phase-selected-streets-voting_phase" class='projekt-phase-selected-streets'>
           <% @poll.voting_phase.bam_streets.each do |street| %>
             <div class='selected-projekt' data-street-id=<%= street.id %>>
