--- a/app/views/custom/layouts/_footer.html.erb
+++ b/app/views/custom/layouts/_footer.html.erb
@@ -96,4 +96,15 @@
       <%= button_tag t('custom.gdpr_notice.accept'), class: 'button success js-accept-gdpr-notice focusable', tabindex: '1' %>
     </div>
   </div>
+
+  <div class="reveal" id="selectBamStreetModal" data-reveal data-show-modal=<%= ( current_user.present? && current_user.bam_street.present? ) ? 'false' : "true" %>>
+    <h1>Header</h1>
+    <p class="lead">Lead.</p>
+    <p>Text</p>
+    <p><%= link_to 'Take me to my account', account_path, class: 'button js-close-select_bam-street-modal' %></p>
+    <button class="close-button js-close-select_bam-street-modal" data-close aria-label="Close modal" type="button">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
 <% end %>
