--- a/app/views/custom/users/registrations/user_details.html.erb
+++ b/app/views/custom/users/registrations/user_details.html.erb
@@ -30,7 +30,7 @@
   <% if @user.citizen? %>
     <div class="row">
       <div class="small-12 column">
-        <%= f.select :bam_street_id, BamStreet.all.map{ |str| [str.name, str.id]  } %>
+        <%= f.select :bam_street_id, BamStreet.all.map{ |str| [str.name, str.id]  }, { prompt: t('helpers.select.prompt') } %>
       </div>
     </div>
   <% else %>
