--- a/app/views/custom/layouts/_footer.html.erb
+++ b/app/views/custom/layouts/_footer.html.erb
@@ -98,11 +98,11 @@
   </div>
 
   <div class="reveal" id="selectBamStreetModal" data-reveal data-show-modal=<%= ( current_user.present? && current_user.bam_street.present? ) ? 'false' : "true" %>>
-    <h1>Header</h1>
-    <p class="lead">Lead.</p>
-    <p>Text</p>
-    <p><%= link_to 'Take me to my account', account_path, class: 'button js-close-select_bam-street-modal' %></p>
-    <button class="close-button js-close-select_bam-street-modal" data-close aria-label="Close modal" type="button">
+    <p><i>Liebe Bürger:innen,</i></p>
+    <p><i>wir entwickeln uns stets weiter und freuen uns auf regen Austausch mit Ihnen. Wir wollen hier zukünftig auch Projekte einstellen, bei denen uns z. B. die Meinung der unmittelbaren Anwohner:innen besonders interessiert. Aus diesem Grund haben wir eine Möglichkeit eingeführt, dass wir die Beteiligung bei einzelnen Maßnahmen, (Bsp.: Umwidmung einer Straße in eine Fahrradstraße) straßengenau eingrenzen können. Daher möchten wir Sie bitten, Ihre Angaben zu ergänzen. Bitte klicken Sie dazu in der oberen roten Leiste auf das „Mein Konto“- Symbol und fügen Sie dort die Straße hinzu, in der Sie wohnen.</i></p>
+    <p><i>Bitte wählen Sie hier die Straße aus, in der Sie laut ihres Ausweisdokuments gemeldet sind. Die Daten werden auf verschlüsseltem Weg verifiziert. Der Schutz Ihrer Daten ist selbstverständlich weiterhin gewährleistet. Sie haben nicht selbstständig die Möglichkeit Ihre Straßenangabe zu ändern. Sollten Sie umziehen und somit eine Änderung nötig sein, wenden Sie sich bitte an buergerbeteiligung@stadt.bamberg.de.</i></p>
+    <p><i>Vielen Dank</i></p>
+    <button class="close-button" data-close aria-label="Close modal" type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
