--- a/app/views/custom/account/show.html.erb
+++ b/app/views/custom/account/show.html.erb
@@ -34,6 +34,8 @@
               <% end %>
             </div>
 
+            <h2 class='margin-top'><%= t("custom.account.show.settings") %></h2>
+
             <div>
               <%= f.check_box :public_activity, {label: t('custom.account.settings.public_activity')} %>
             </div>
