--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -54,8 +54,9 @@
 
   <% if @latest_polls.any? %>
     <div class="row">
-      <div class="column medium-8 small-centered">
-        <%= render partial: "cards", locals: { cards: @archived_projekt_cards, section_title: t("custom.welcome.archived_projekt_cards.title")  } %>
+      <div class="column medium-8 small-centered margin-bottom">
+        <h3 class='title card-title'><%= t('custom.welcome.current_polls') %></h3>
+        <%= render partial: "polls/poll_group", locals: { poll_group: @latest_polls } %>
       </div>
     </div>
   <% end %>
@@ -66,11 +67,14 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="column medium-8 small-centered">
-      <%= render "feeds" %>
+  <% if @latest_items.any? %>
+    <div class="row">
+      <div class="column medium-8 small-centered margin-top margin-bottom">
+        <h3 class='title card-title'><%= t('custom.welcome.user_entries') %></h3>
+        <%= render "latest_items" %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
   <div class="row">
     <div class="column medium-8 small-centered welcome-main custom-block">
