--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag(image_path_for("logo_left.png"), class: "float-left secondary-logo hide-for-small-only", alt: t("layouts.header.logo")) %>
     <% end %>
 
-    <h2 class='header-title hide-for-small-only'>Deinen Ort bewegen!</h2>
+    <h2 class='header-title hide-for-small-only'>LOSLAND Vernetzungsplattform</h2>
 
     <span data-responsive-toggle="responsive-menu"
           data-hide-for="medium"
@@ -37,7 +37,7 @@
         <div class="show-for-small-only">
           <div class="subnavigation">
 
-            <h2 class='city-name'>Deinen Ort bewegen!</h2>
+            <h2 class='city-name'>LOSLAND Vernetzungsplattform</h2>
 
             <% unless current_user %>
               <div class='account-buttons'>
