--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -17,8 +17,9 @@
 
   <div class="jumbo not-print">
     <div class='jumbo-message'>
-      <h1>Herzlich Willkommen!</h1>
-      <p>Wir laden Dich herzlich ein, Deine Kommune mitzugestalten! Hier kannst Du Dich informieren, diskutieren, deine Ideen einbringen und über Dinge abstimmen, die Dir wichtig sind.</p>
+      <p>Herzlich willkommen auf der LOSLAND Vernetzungsplattform!</p>
+      <p>Hier können Sie sich in einem geschützten Raum über ihre Beteiligungsprozesse und verwandte Themen austauschen. Eröffnen Sie dafür eine Diskussion und ordnen Sie diese den bestehenden Themenfeldern oder weiteren Themen zu. Sie können bis zu drei Dokumente anfügen und sich in der Folge gegenseitig zu Ihren Beiträgen Feedback geben.</p>
+      <p>Viel Spaß und einen spannenden Austausch!</p>
     </div>
   </div>
 <% end %>
