--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -63,6 +63,10 @@
       width: 70%;
       max-width: 40rem;
       @include grid-column-gutter;
+
+      p {
+        font-size: 20px;
+      }
     }
 
     @media only screen and (min-width: 75rem) {
@@ -190,12 +194,12 @@
     }
 
     @media only screen and (min-width: 1280px) and (max-width: 1900px) {
-      height: 740px;
+      height: 500px;
       padding-top: $welcometextpositionmedium;
       background-position: center 65%;
 
       .jumbo-message {
-        width: 40%;
+        width: 60%;
       }
 
       span {
@@ -223,10 +227,6 @@
         background: $welcomebuttonbg;
         color: $welcomebuttontext;
       }
-    }
-
-    @media only screen and (min-width: 1280px) {
-      height: 500px;
     }
 
     @media only screen and (min-width: 1900px) {
