--- a/app/views/custom/devise/passwords/new.html.erb
+++ b/app/views/custom/devise/passwords/new.html.erb
@@ -13,10 +13,10 @@
     <div class="row">
       <div class="small-12 column">
         <%= f.email_field :email, autofocus: true %>
+      </div>
 
-        <div class="small-12 medium-6 small-centered">
-          <%= f.submit t("devise_views.passwords.new.send_submit"), class: "button expanded" %>
-        </div>
+      <div class="small-12 medium-6 small-centered column">
+        <%= f.submit t("devise_views.passwords.new.send_submit"), class: "button expanded" %>
       </div>
     </div>
   <% end %>
