--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -58,7 +58,7 @@
     background-repeat: no-repeat;
     background-color: $welcomebgcolor;
     position: relative;
-    height: 285px;
+    min-height: 285px;
  
     .jumbo-message {
       // position: absolute;
