--- a/app/views/admin/users/_users.html.erb
+++ b/app/views/admin/users/_users.html.erb
@@ -12,6 +12,16 @@
         <% else %>
           <th scope="col"><%= t("admin.users.columns.name") %></th>
           <th scope="col"><%= t("admin.users.columns.email") %></th>
+
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_first_name") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_last_name") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_street_name") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_street_number") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_plz") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.pfo_city") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.gender") %></th>
+          <th scope="col"><%= t("cli.admin.users.columns.date_of_birth") %></th>
+
           <th scope="col"><%= t("admin.users.columns.document_number") %></th>
           <th scope="col"><%= t("admin.users.columns.roles") %></th>
           <th scope="col"><%= t("admin.users.columns.verification_level") %></th>
@@ -27,6 +37,16 @@
           <% else %>
             <td><%= link_to user.name, user_path(user), target: "_blank" %></td>
             <td><%= user.email %></td>
+
+            <td><%= user.pfo_first_name %></td>
+            <td><%= user.pfo_last_name %></td>
+            <td><%= user.pfo_street_name %></td>
+            <td><%= user.pfo_street_number %></td>
+            <td><%= user.pfo_plz %></td>
+            <td><%= user.pfo_city %></td>
+            <td><%= t("cli.gender.#{user.gender}") if user.gender.present? %></td>
+            <td><%= l user.date_of_birth.to_date if user.date_of_birth.present? %></td>
+
             <td><%= user.document_number %></td>
             <td><%= display_user_roles(user) %></td>
             <td><%= user.user_type %></td>
