--- a/app/views/custom/users/registrations/new.html.erb
+++ b/app/views/custom/users/registrations/new.html.erb
@@ -59,7 +59,7 @@
 
       <div class="row">
         <div class="column small-12">
-          <%= f.select :gender, options_for_gender_select %>
+          <%= f.select :gender, options_for_gender_select, include_blank: true %>
         </div>
       </div>
 
