--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,8 +1,8 @@
 // brand_color
-$brand:                                           #004a83 !default;
+$brand:                                           #50b6b4 !default;
 $brand-secondary:                                 #002d50 !default;
 $secondary:                                       lighten($brand, 70%);
-$accent:                                          lighten($brand, 50%);
+$accent:                                          #ee7444;
 $dark:                                            darken($brand, 10%);
 
 
