--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -34,7 +34,7 @@
     }
 
     a {
-      background: linear-gradient(to top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.2) 40%);
+      background: linear-gradient(to top, #50b6b4 0%, rgba(0, 0, 0 , 0.2) 80%);
       display: inline-block;
     }
   }
