--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2618,7 +2618,7 @@ table {
 
     &.title {
       display: inline-block;
-      border-top: 4px solid $brand;
+      border-top: 4px solid $accent;
       margin-bottom: 0;
       padding: $line-height / 2 0;
     }
