--- a/app/components/budgets/investments/ballot_component.html.erb
+++ b/app/components/budgets/investments/ballot_component.html.erb
@@ -8,6 +8,7 @@
         <%= investment.formatted_price %>
       </p>
       <% if investment.should_show_ballots? %>
+<%= investment.budget_ballot_lines.sum(:line_weight) %>
         <%= button_to budget_ballot_line_path(id: investment.id,
                                               budget_id: investment.budget_id,
                                               investments_ids: investment_ids),
@@ -27,11 +28,14 @@
       <% if investment.should_show_ballots? %>
 
         <% if investment.budget.distributed_voting? %>
+<%= investment.budget_ballot_lines.sum(:line_weight) %>
           <%= form_with url: budget_ballot_lines_path(investment_id: investment.id,
                                                       budget_id: investment.budget_id,
                                                       investments_ids: investment_ids),
                         local: false do |f| %>
-            <%= f.select :line_weight, [[1, 1], [2, 2], [3, 3]] %>
+            <% if ballot.amount_available(investment.heading) > 0 %>
+              <%= f.select :line_weight, line_weight_options_for_select %>
+            <% end %>
             <%= f.submit t("budgets.investments.investment.add"),
               class: "button button-support expanded",
               title: t("budgets.investments.investment.support_title"),
