--- a/app/views/cli/welcome/_header.html.erb
+++ b/app/views/cli/welcome/_header.html.erb
@@ -3,7 +3,7 @@
   <style>
     <%if header_large%>
       .home-page .jumbo{
-        background-image: url("<%=header_large.image.variant(:large)%>");
+        background-image: url("<%= polymorphic_path(header_large.image.attachment) %>");
         background-size: cover;
       }
     <%end%>
