--- a/app/views/cli/shared/_card.html.erb
+++ b/app/views/cli/shared/_card.html.erb
@@ -2,7 +2,7 @@
      class="card small-12 medium-<%= card.columns %> column margin-bottom end">
   <%= link_to card.link_url do %>
     <% if card.image.present? %>
-      <%= image_tag(card.image_url(:large), alt: card.image.title) %>
+      <%= image_tag(card.image.variant(:large), alt: card.image.title) %>
     <% end %>
     <p><%= card.title %></p>
   <% end %>
