--- a/app/views/cli/welcome/_card.html.erb
+++ b/app/views/cli/welcome/_card.html.erb
@@ -2,8 +2,9 @@
      class="card small-12 medium-<%= card.columns %> column margin-bottom end" data-equalizer-watch>
   <%= link_to card.link_url do %>
     <% if card.image.present? %>
-      <%= image_tag(card.image_url(:large), alt: card.image.title) %>
+      <%= image_tag(card.image.variant(:large), alt: card.image.title) %>
     <% end %>
+
     <p><%= card.title %></p>
   <% end %>
 </div>
