--- a/app/assets/stylesheets/custom/admin.scss
+++ b/app/assets/stylesheets/custom/admin.scss
@@ -12,3 +12,13 @@
     column-count: 10;
   }
 }
+
+.officing-offline-ballots {
+  @media screen and (min-width: 75em) {
+    .budget-heading::before,
+    .jumbo-budget::after {
+      left: 0;
+      right: 0;
+    }
+  }
+}
