--- a/app/views/custom/officing/offline_ballots/verify_user.html.erb
+++ b/app/views/custom/officing/offline_ballots/verify_user.html.erb
@@ -23,6 +23,12 @@
                          autocomplete: "off" %>
       </div>
 
+      <div class="date-of-birth small-12 medium-6 clear">
+      <%= f.date_select :date_of_birth,
+                        prompt: true,
+                        start_year: 1900, end_year: minimum_required_age.years.ago.year %>
+      </div>
+
       <div class="small-12 medium-6">
         <input type="submit" value="<%= t("officing.residence.new.submit") %>" class="button expanded">
       </div>
