--- a/app/views/custom/verification/residence/_manual_verification_form.html.erb
+++ b/app/views/custom/verification/residence/_manual_verification_form.html.erb
@@ -45,7 +45,7 @@
     </div>
   <% end %>
 
-  <% if Setting["extra_fields.registration.gender"] %>
+  <% if Setting["extra_fields.registration.date_of_birth"] %>
     <div class="small-12 medium-5 clear">
 			<%= f.label t("custom.verification.residence.new.date_of_birth") %>
       <div class="user-date-of-birth sign-up">
