--- a/app/views/custom/budgets/investments/show.html.erb
+++ b/app/views/custom/budgets/investments/show.html.erb
@@ -8,25 +8,32 @@
   investment_ids: @investment_ids,
   ballot: @ballot %>
 
-<div class='additional-content margin-top'>
-  <div class='filter-subnav'>
-    <div class="row">
-      <div class="small-12 column">
-        <%= render "budgets/investments/filter_subnav" %>
+<% if projekt_feature?(@investment&.projekt, 'budgets.show_comments') ||
+      projekt_feature?(@investment&.projekt, 'budgets.enable_investment_milestones_tab') %>
+  <div class='additional-content margin-top'>
+    <div class='filter-subnav'>
+      <div class="row">
+        <div class="small-12 column">
+          <%= render "budgets/investments/filter_subnav" %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
 
 <div class="tabs-content" data-tabs-content="investments_tabs">
-  <div class="tabs-panel is-active" id="tab-comments">
-    <%= render MachineLearning::CommentsSummaryComponent.new(@investment) %>
+  <% if projekt_feature?(@investment&.projekt, 'budgets.show_comments') %>
+    <div class="tabs-panel is-active" id="tab-comments">
+      <%= render MachineLearning::CommentsSummaryComponent.new(@investment) %>
 
-    <%= render "/comments/comment_tree", comment_tree: @comment_tree,
-                                         display_comments_count: false %>
-  </div>
+      <%= render "/comments/comment_tree", comment_tree: @comment_tree,
+                                           display_comments_count: false %>
+    </div>
+  <% end %>
 
-  <div class="tabs-panel" id="tab-milestones">
-    <%= render "milestones/milestones", milestoneable: @investment %>
-  </div>
+  <% if projekt_feature?(@investment&.projekt, 'budgets.enable_investment_milestones_tab') %>
+    <div class="tabs-panel" id="tab-milestones">
+      <%= render "milestones/milestones", milestoneable: @investment %>
+    </div>
+  <% end %>
 </div>
