--- a/app/views/custom/pages/projekt_footer/budget/_my_ballot.html.erb
+++ b/app/views/custom/pages/projekt_footer/budget/_my_ballot.html.erb
@@ -1,4 +1,4 @@
-<% if @heading && can?(:show, @ballot) %>
+<% if @heading && can?(:show, @ballot) && false %>
   <div class="my-ballot">
     <h2 class="sidebar-title">
       <%= t("budgets.investments.index.sidebar.my_ballot") %>
