--- a/app/components/budgets/ballot/investment_component.html.erb
+++ b/app/components/budgets/ballot/investment_component.html.erb
@@ -1,5 +1,6 @@
 <li id="<%= list_item_id %>">
   <%= investment_title %>
+  <%= user_votes %>
   <%= investment_price %>
 
   <% if budget.balloting? %>
