--- a/app/components/budgets/investments/ballot_component.html.erb
+++ b/app/components/budgets/investments/ballot_component.html.erb
@@ -22,6 +22,9 @@
                       "aria-label": remove_vote_aria_label do %>
           <%= t("budgets.ballots.show.remove") %>
         <% end %>
+        <% unless current_user.level_three_verified? %>
+          <%= t("custom.budgets.investments.investment.unverified_note") %>
+        <% end %>
       <% end %>
     </div>
   <% else %>
