--- a/app/views/budgets/investments/_sidebar.html.erb
+++ b/app/views/budgets/investments/_sidebar.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 <% end %>
 
-<% if @heading && can?(:show, @ballot) && false %>
+<% if @heading && can?(:show, @ballot) %>
   <div class="my-ballot">
     <h2 class="sidebar-title">
       <%= t("budgets.investments.index.sidebar.my_ballot") %>
