--- a/app/components/budgets/investments/ballot_component.html.erb
+++ b/app/components/budgets/investments/ballot_component.html.erb
@@ -16,8 +16,8 @@
                                               budget_id: investment.budget_id,
                                               investments_ids: investment_ids,
                                               user_id: params[:user_id],
-                                              top_level_active_projekt_ids: @top_level_active_projekts.pluck(:id),
-                                              top_level_archived_projekt_ids: @top_level_archived_projekts.pluck(:id)),
+                                              top_level_active_projekt_ids: (@top_level_active_projekts || []).pluck(:id),
+                                              top_level_archived_projekt_ids: (@top_level_archived_projekts || []).pluck(:id)),
                       class: "button button-remove-support expanded",
                       method: :delete,
                       remote: true,
@@ -46,8 +46,8 @@
           <%= form_with url: budget_ballot_lines_path(investment_id: investment.id,
                                                       budget_id: investment.budget_id,
                                                       investments_ids: investment_ids,
-                                                      top_level_active_projekt_ids: @top_level_active_projekts.pluck(:id),
-                                                      top_level_archived_projekt_ids: @top_level_archived_projekts.pluck(:id)),
+                                                      top_level_active_projekt_ids: (@top_level_active_projekts || []).pluck(:id),
+                                                      top_level_archived_projekt_ids: (@top_level_archived_projekts || []).pluck(:id)),
                         local: false do |f| %>
             <% if ballot.amount_available(investment.heading) > 0 %>
               <%= f.label :line_weight, t("custom.budgets.investments.investment.line_weight_label"), style: "font-weight: normal"  %>
@@ -64,8 +64,8 @@
                                                  budget_id: investment.budget_id,
                                                  investments_ids: investment_ids,
                                                  user_id: params[:user_id],
-                                                 top_level_active_projekt_ids: @top_level_active_projekts.pluck(:id),
-                                                 top_level_archived_projekt_ids: @top_level_archived_projekts.pluck(:id)),
+                                                 top_level_active_projekt_ids: (@top_level_active_projekts || []).pluck(:id),
+                                                 top_level_archived_projekt_ids: (@top_level_archived_projekts || []).pluck(:id)),
                         class: "button button-support expanded",
                         title: t("budgets.investments.investment.support_title"),
                         method: :post,
